[Enhancement] Improve data cleanup performance for dropped tables in shared data mode(sync #39883) (#15540)